--- a/app/src/main/res/layout/menu_item_layout.xml
+++ b/app/src/main/res/layout/menu_item_layout.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
+    android:paddingBottom="@dimen/padding_4_dp"
     android:weightSum="100">
 
     <TextView
