--- a/app/src/main/res/layout/activity_generate_invoice.xml
+++ b/app/src/main/res/layout/activity_generate_invoice.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="?android:attr/actionBarSize"
-    android:orientation="vertical">
+    android:orientation="vertical"
     tools:context="com.sales.tandt.activity.GenerateInvoiceActivity">
 
     <android.support.v7.widget.RecyclerView
@@ -23,23 +23,31 @@
         android:layout_alignParentBottom="true"
         android:text="@string/send_sms_btn_text" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:padding="@dimen/padding_8_dp"
         android:layout_above="@id/activity_generate_invoice_send_sms_btn">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_size_18"
             android:text="@string/total_lbl"/>
 
         <TextView
             android:id="@+id/activity_generate_invoice_total_amt_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            />
-    </LinearLayout>
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_size_18"
+            tools:text="Rs. 50"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
