--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,21 +11,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:padding="@dimen/margin_12_dp">
 
         <Button
             android:id="@+id/activity_main_menu_bt"
             style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="120dp"
-            android:layout_height="80dp"
-            android:layout_marginRight="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_80_dp"
             android:text="Menu" />
 
         <Button
             android:id="@+id/activity_main_add_menu_bt"
             style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="120dp"
-            android:layout_height="80dp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_80_dp"
             android:text="Add menu item" />
 
     </LinearLayout>
