--- a/app/src/main/res/layout/activity_menu_list.xml
+++ b/app/src/main/res/layout/activity_menu_list.xml
@@ -19,6 +19,7 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_50_dp"
+        android:enabled="false"
         android:layout_alignParentBottom="true"
         android:text="Submit" />
 
